--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ addons:
       name: "h0l0tn1k/Minesweeper"
       description: "Build submitted via Travis CI"
     notification_email: 422255@mail.muni.cz
-    build_command_prepend: "msbuild /t:Clean"
-    build_command:   "msbuild /t:Rebuild"
+    build_command_prepend: "xbuild /t:Clean"
+    build_command:   "xbuild /t:Rebuild"
     branch_pattern: coverity_scan
